tests/ui/parser/pat-lt-bracket-4.stderr
error: generic args in patterns require the turbofish syntax
  --> $DIR/pat-lt-bracket-4.rs:8:12
   |
LL |         Foo<T>::A(value) => value,
   |            ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |         Foo::<T>::A(value) => value,
   |            ++

error: aborting due to 1 previous error

